--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,23 @@
 /*
     You can add your own custom styles here.
 */
+/* Import Vazirmatn font from Fontapa CDN */
+@import url('https://cdn.fontapa.com/vazirmatn/vazirmatn.css');
+
+/* Apply Vazirmatn to the entire site for Persian content */
+:lang(fa) {
+    font-family: 'Vazirmatn', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+
+    /* Additional typography improvements for RTL */
+    text-align: right;
+    line-height: 1.8;
+}
+
+/* Optional: Improve heading sizes in Persian */
+:lang(fa) h1,
+:lang(fa) h2,
+:lang(fa) h3,
+:lang(fa) h4 {
+    font-weight: 700;
+    line-height: 1.4;
+}
